recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:7: error: not enough arguments for method subtree: (steps: Int, length: Double, angle: Double, shrink: Double)Unit.
Unspecified value parameters steps, length, angle, ...
	  subtree()
                 ^Tree:9: error: not enough arguments for method subtree: (steps: Int, length: Double, angle: Double, shrink: Double)Unit.
Unspecified value parameters steps, length, angle, ...
  	subtree()
               ^