recursion.logo.lessons.recursion.logo.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
  if (steps==0){return}
  
  else {
    avance(length)
  	droite(angle)
	  subtree()
  	gauche(2*angle)
  	subtree()
    recule(shrink*length)
    current(steps)
  }
  
}